@@ -1,5 +1,13 @@
 2011-05-20  Ivan Maidanski  <ivmai@mail.ru>
 
+	* mark.c (GC_push_selected): Remove "push_fn" argument (use
+	GC_push_all directly); update the documentation; reformat the
+	comment.
+	* mark.c (GC_push_conditional): Simplify the code (for better
+	readability).
+
+2011-05-20  Ivan Maidanski  <ivmai@mail.ru>
+
 	* mark.c (alloc_mark_stack): Use FALSE/TRUE (instead of 0/1) for
 	boolean local variables.
 	* doc/README.macros (GC_PREFER_MPROTECT_VDB): Update.
